--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,6 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="8" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:icon="@drawable/ic_launcher"
@@ -18,8 +19,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
         <activity 
             android:name=".HAPdroidRootActivity"
+            android:label="@string/app_name">
+        </activity>
+        
+        <activity
+            android:name="HAPdroidNonRootActivity"
             android:label="@string/app_name">
         </activity>
     </application>
