--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,6 +29,11 @@
             android:name="HAPdroidNonRootActivity"
             android:label="@string/app_name">
         </activity>
+        
+        <service 
+            android:name=".HAPdroidService"
+            android:exported="false">
+        </service>
     </application>
 
 </manifest>
