--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,6 +31,11 @@
             android:label="@string/app_name">
         </activity>
         
+        <activity
+            android:name="HAPdroidGraphletActivity"
+            android:label="@string/app_name">
+        </activity>
+        
         <service 
             android:name=".HAPdroidService"
             android:exported="false">
