--- a/project.properties
+++ b/project.properties
@@ -9,3 +9,5 @@
 
 # Project target.
 target=android-8
+android.library.reference.1=..\\AndEngine
+android.library.reference.2=../roottools-read-only/RootTools_sdk3_generic
