--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-sdk android:minSdkVersion="8" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:icon="@drawable/ic_launcher"
@@ -32,7 +33,7 @@
         </activity>
         
         <activity
-            android:name="HAPdroidGraphletActivity"
+            android:name=".HAPdroidGraphletActivity"
             android:label="@string/app_name">
         </activity>
         
