--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,7 +32,7 @@
         </activity>
         
         <activity
-            android:name="HAPdroidGraphletActivity"
+            android:name=".HAPdroidGraphletActivity"
             android:label="@string/app_name">
         </activity>
         
