--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,7 +23,7 @@
         </activity>
         
         <activity 
-            android:name=".HAPdroidRootActivity"
+            android:name=".HAPdroidActivity"
             android:label="@string/app_name">
         </activity>
         
