--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,10 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="8" />
+    <uses-sdk 
+        android:minSdkVersion="8"
+        android:targetSdkVersion="15">
+    </uses-sdk>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
@@ -29,7 +32,8 @@
         
         <activity
             android:name=".HAPdroidGraphletActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar">
         </activity>
         
         <service 
