--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity
             android:name=".FileImportActivity"
             android:label="@string/import_file_title"
-            android:theme="@android:style/Theme.Light" >
+            android:theme="@style/FileDialog" >
             <intent-filter>
                 <action android:name="android.intent.action.GET_CONTENT" />
 
