--- a/project.properties
+++ b/project.properties
@@ -9,4 +9,6 @@
 
 # Project target.
 target=android-8
-android.library.reference.1=../aFileChooser/aFileChooser
+android.library.reference.1=../afilechooser-read-only/aFileChooser
+android.library.reference.3=../roottools-read-only/RootTools_sdk3_generic
+android.library.reference.2=../AndEngine
