fixing file import

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,11 +36,11 @@
             android:theme="@style/FileDialog" >
             <intent-filter>
                 <action android:name="android.intent.action.GET_CONTENT" />
-
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.OPENABLE" />
-
                 <data android:mimeType="*/*" />
+                <data android:pathPattern="*.pcap"/>
+                <data android:pathPattern="*.gz"/>
             </intent-filter>
         </activity>
 
