--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -45,7 +45,7 @@
         </activity>
 
         <service
-            android:name=".HAPdroidService"
+            android:name=".service.HAPdroidService"
             android:exported="false" >
         </service>
     </application>
